--- a/request-green-light.ipynb
+++ b/request-green-light.ipynb
@@ -311,7 +311,7 @@
     "  def update_sheet(self, i, status):\n",
     "    today = datetime.date.today()\n",
     "    self.sheet.update(f\"K{i+2}\", status)\n",
-    "    self.sheet.update(f\"L{i+2}\", today.strftime(\"%B %d, %Y\"))\n",
+    "    self.sheet.update(f\"L{i+2}\", today.strftime(\"%B %d, %Y ~ %H:%M:%S\"))\n",
     "\n",
     "  def close_popup(self, text=\"close\"):\n",
     "    for el in driver.find_elements(By.CLASS_NAME, \"ui-button-text\"):\n",
