--- a/request_green_light.ipynb
+++ b/request_green_light.ipynb
@@ -11,7 +11,9 @@
     "from time import sleep\n",
     "import datetime\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "from pygame import mixer\n",
+    "import AppKit"
    ]
   },
   {
@@ -25,13 +27,21 @@
     "from selenium.webdriver.chrome.options import Options\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.common.by import By\n",
-    "from selenium.common.exceptions import NoSuchElementException, NoAlertPresentException, UnexpectedAlertPresentException, ElementClickInterceptedException, StaleElementReferenceException\n",
+    "from selenium.common.exceptions import (\n",
+    "    NoSuchElementException,\n",
+    "    NoAlertPresentException,\n",
+    "    UnexpectedAlertPresentException,\n",
+    "    ElementClickInterceptedException,\n",
+    "    StaleElementReferenceException,\n",
+    ")\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "\n",
     "options = Options()\n",
     "options.headless = True\n",
-    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
+    "driver = webdriver.Chrome(\n",
+    "    service=Service(ChromeDriverManager().install()), options=options\n",
+    ")\n",
     "driver.set_window_position(0, 0)\n",
     "driver.set_window_size(1400, 768)"
    ]
@@ -44,7 +54,7 @@
    "source": [
     "sa = gspread.service_account(filename=\"./credentials/jp-macdonnel-b7aa48547774.json\")\n",
     "sh = sa.open(\"green-lights\")\n",
-    "sheet = sh.worksheet(\"2023-02-26\")\n",
+    "sheet = sh.worksheet(\"2023-03-11\")\n",
     "master = sh.worksheet(\"master\")\n",
     "df_master = pd.DataFrame(master.get_all_records())\n",
     "\n",
@@ -119,6 +129,11 @@
     "    \"U.S. Virgin Islands\": \"VI\",\n",
     "}\n",
     "\n",
+    "def beep_5_times():\n",
+    "    for _ in range(5):\n",
+    "        AppKit.NSBeep()\n",
+    "        sleep(.2)\n",
+    "\n",
     "\n",
     "class GreenLight:\n",
     "    def __init__(self, sheet):\n",
@@ -161,6 +176,8 @@
     "        self.seen_companies = set()\n",
     "        for item in df_master[\"Customer Name\"].values.tolist():\n",
     "            self.seen_companies.add(item)\n",
+    "        mixer.init()\n",
+    "        self.alarm = mixer.Sound(\"driftveil.mp3\")\n",
     "\n",
     "    def parse_address(self, address):\n",
     "        try:\n",
@@ -233,6 +250,7 @@
     "\n",
     "    def open_leads_tab(self):\n",
     "        print(\"opening leads tab\")\n",
+    "        self.attempts = 45 if self.attempts == 0 else self.attempts\n",
     "        try:\n",
     "            applet = driver.find_element(By.CLASS_NAME, \"AppletTitle\")\n",
     "            if applet:\n",
@@ -250,16 +268,19 @@
     "        try:\n",
     "            button = driver.find_element(By.ID, \"s_1_1_110_0_Ctrl\")\n",
     "            print(\"starting new lead\")\n",
-    "            self.attempts = 0\n",
     "            button.click()\n",
+    "            self.attempts = 0\n",
     "        except NoSuchElementException:\n",
-    "            if self.attempts >= 50:\n",
-    "                self.attempts = 0\n",
-    "                raise Exception(\"attempt limit exceeded\")\n",
-    "            print(f\"attempting for the {self.attempts + 1} time\")\n",
-    "            sleep(1)\n",
-    "            self.attempts += 1\n",
-    "            self.start_new_lead()\n",
+    "            self.attempt(self.start_new_lead())\n",
+    "\n",
+    "    def cancel_lead(self):\n",
+    "        try:\n",
+    "            button = driver.find_element(By.ID, \"s_1_1_112_0_Ctrl\")\n",
+    "            print(\"canceling lead\")\n",
+    "            button.click()\n",
+    "            self.attempts = 0\n",
+    "        except NoSuchElementException:\n",
+    "            self.attempt(self.cancel_lead())\n",
     "\n",
     "    def compare_customer_to_master(self, customer_name):\n",
     "        return customer_name in self.seen_companies\n",
@@ -279,6 +300,9 @@
     "    ):\n",
     "        print(\"filling form\")\n",
     "\n",
+    "        if not (address and city and state and zip_code):\n",
+    "            raise InvalidAddressException\n",
+    "\n",
     "        inputs = driver.find_elements(By.TAG_NAME, \"input\")\n",
     "\n",
     "        for input in inputs:\n",
@@ -290,6 +314,8 @@
     "                elif input.get_attribute(\"name\") == self.input_names[\"last_name\"]:\n",
     "                    input.send_keys(last_name)\n",
     "                elif input.get_attribute(\"name\") == self.input_names[\"job_title\"]:\n",
+    "                    if len(job_title) > 30:\n",
+    "                        job_title = job_title[:30]\n",
     "                    input.send_keys(job_title)\n",
     "                elif input.get_attribute(\"name\") == self.input_names[\"email\"] and email:\n",
     "                    input.send_keys(email)\n",
@@ -319,14 +345,14 @@
     "                ):\n",
     "                    input.send_keys(100)\n",
     "            except TypeError as e:\n",
-    "                print(e)\n",
+    "                print(e.__class__.__name__, \" while attempting to self.fill\")\n",
     "            except StaleElementReferenceException as e:\n",
-    "                print(\"stale element exception error\")\n",
+    "                print(e.__class__.__name__, \" while attempting to self.fill\")\n",
     "\n",
     "    def accept_alert(self):\n",
     "        try:\n",
     "            alert = driver.switch_to.alert\n",
-    "            self.attempts = 0\n",
+    "            self.attempts = 45 if self.attempts == 0 else self.attempts\n",
     "            status = alert.text\n",
     "            alert.accept()\n",
     "            print(\"accepting alert\")\n",
@@ -460,7 +486,7 @@
     "                last_name = last_name if last_name else \"FakeLastName\"\n",
     "                if not (city or state or zip_code):\n",
     "                    print(\n",
-    "                        \"no city, state, or zip code. Atempting to parse address.\",\n",
+    "                        \"no city or state or zip code. Atempting to parse address.\",\n",
     "                    )\n",
     "                    parsed = self.parse_address(address)\n",
     "                    address = parsed[\"address\"]\n",
@@ -494,7 +520,9 @@
     "                sleep(0.5)\n",
     "                self.start_new_lead()\n",
     "        except UnexpectedAlertPresentException as e:\n",
-    "            print(e)\n",
+    "            print(e.__class__.__name__)\n",
+    "            sleep(0.5)\n",
+    "            print(\"switching to alert\")\n",
     "            alert = driver.switch_to.alert\n",
     "            self.update_sheet(\n",
     "                i,\n",
@@ -505,7 +533,7 @@
     "            self.accept_alert()\n",
     "            self.attempts = 0\n",
     "        except ElementClickInterceptedException as e:\n",
-    "            print(e)\n",
+    "            print(e.__class__.__name__)\n",
     "            self.close_popup()\n",
     "            sleep(0.5)\n",
     "            status = self.determine_status_and_protected_until()\n",
@@ -519,14 +547,37 @@
     "                    i, \"Element Click Intercepted Exception. Row likely skipped.\"\n",
     "                )\n",
     "        except InvalidStateError as e:\n",
-    "            print(e)\n",
+    "            print(e.__class__.__name__)\n",
     "            self.update_sheet(\n",
     "                i,\n",
     "                \"Key Error. Unable to convert state name to ISO code. Row likely skipped.\",\n",
     "            )\n",
     "        except InvalidAddressException as e:\n",
-    "            print(e)\n",
+    "            print(e.__class__.__name__)\n",
     "            self.update_sheet(i, \"Invalid Address. Row likely skipped.\")\n",
+    "        except Exception as e:\n",
+    "            beep_5_times()\n",
+    "            ex_type = e.__class__.__name__\n",
+    "            print(ex_type)\n",
+    "            self.skip_row_with_unexpected_exception(i, ex_type)\n",
+    "\n",
+    "    def skip_row_with_unexpected_exception(self, i, ex_type):\n",
+    "        print(\"attempting to skip row due to unexpected exception\")\n",
+    "        try:\n",
+    "            sleep(0.5)\n",
+    "            alert = driver.switch_to.alert\n",
+    "            self.update_sheet(\n",
+    "                i,\n",
+    "                f\"Unexpected exception: {ex_type}; with alert present: {alert.text}. \\n\\nRow likely skipped.\",\n",
+    "            )\n",
+    "            self.accept_alert()\n",
+    "            sleep(.5)\n",
+    "            self.cancel_lead()\n",
+    "            sleep(.5)\n",
+    "            self.start_new_lead()\n",
+    "        except Exception as e:\n",
+    "            print(e.__class__.__name__)\n",
+    "            raise e\n",
     "\n",
     "    def iterate(self, start=0, end=None):\n",
     "        # changed unishippers to self might need to change back\n",
@@ -543,7 +594,7 @@
     "            email,\n",
     "            address,\n",
     "            city,\n",
-    "            state,``\n",
+    "            state,\n",
     "            zip_code,\n",
     "            status,\n",
     "            updated,\n",
@@ -566,8 +617,15 @@
     "            )\n",
     "            print(\"\\n\\n\")\n",
     "\n",
+    "    def iterate_with_alarm(self):\n",
+    "        try:\n",
+    "            self.iterate()\n",
+    "        except Exception as e:\n",
+    "            self.alarm.play()\n",
+    "            raise e\n",
     "\n",
-    "unishippers = GreenLight(sheet)\n"
+    "\n",
+    "unishippers = GreenLight(sheet)"
    ]
   },
   {
@@ -603,7 +661,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unishippers.iterate()"
+    "unishippers.iterate_with_alarm()\n",
+    "# unishippers.iterate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unishippers.alarm.fadeout(1200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unishippers.cancel_lead()\n",
+    "unishippers.start_new_lead()"
    ]
   },
   {
